--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "mongoose": "^8.2.3",
     "react": "^18.2.0"
   },
+  "scripts":{
+  },
+
   "devDependencies": {
+    "@babel/core": "^7.24.3",
+    "@babel/preset-env": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
+    "babel-loader": "^9.1.3",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
